--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
+Depends:
+    nnls
 Config/testthat/edition: 3
